finishes PWA and Release on Github

--- a/7FlipCounter/angular.json
+++ b/7FlipCounter/angular.json
@@ -55,7 +55,7 @@
               ],
               "outputHashing": "all",
               "serviceWorker": "ngsw-config.json",
-              "baseHref": "/7-flip-counter/"
+              "baseHref": "/7FlipCounter/"
             },
             "development": {
               "optimization": false,
