--- a/7FlipCounter/angular.json
+++ b/7FlipCounter/angular.json
@@ -60,7 +60,9 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "serviceWorker": "ngsw-config.json",
+              "baseHref": "/"
             }
           },
           "defaultConfiguration": "production"
