--- a/7FlipCounter/ngsw-config.json
+++ b/7FlipCounter/ngsw-config.json
@@ -7,7 +7,7 @@
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon.ico",
+          "/7flip-favicon.ico",
           "/index.csr.html",
           "/index.html",
           "/manifest.webmanifest",
